Regrese al inicio, me odio

--- a/recibir.html
+++ b/recibir.html
@@ -2,10 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src https://fonts.gstatic.com;">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Love Letters</title>
-
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
@@ -21,7 +19,7 @@
   <h1 class="ms-madi-regular">Letters</h1>
 
   <div class="contenedor sour-gummy">
-    <h2>¡Qué mensaje más bonito!</h2>
+    <h2>¡Que mensaje más bonito!</h2>
 
     <section id="seccion-descifrar">
       <input type="password" id="claveDescifrar" placeholder="Introduce la clave para descifrar" />
@@ -37,3 +35,5 @@
   <script src="main.js"></script>
 </body>
 </html>
+
+
